chore: address comment feedback